--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -24,6 +24,13 @@ on:
 
 permissions:
   contents: read
+tools:
+  eslint:
+    enabled: true
+    patternIncludes:
+      - "**/*.js"
+    patternExcludes:
+      - "node_modules/**"
 
 jobs:
   codacy-security-scan:
